# Rpi_Spi

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  TestApp.c
cmake/: uninstall.cmake
docs/: CMakeLists.txt
include/Rpi_Spi/: Rpi_Spi.h
src/: CMakeLists.txt  Rpi_Spi.c
tests/: CMakeLists.txt  Rpi_Spi_unittest.c
